--- a/src/sass/components/_buttons.sass
+++ b/src/sass/components/_buttons.sass
@@ -292,7 +292,7 @@
 	color: #{$logo-bg-color}
 	text-transform: uppercase
 	text-align: center
-	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3)
+	border: 1px solid #ccc
 	transition-property: box-shadow, background-color
 	transition-duration: $animation-speed
 
@@ -357,7 +357,7 @@
 		text-align: left
 
 	.no-touchevents &:hover
-		box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5)
+		box-shadow: 0 0 3px rgba(0, 0, 0, 0.15)
 
 /* button to site end
 
