--- a/src/sass/partials/_layout.sass
+++ b/src/sass/partials/_layout.sass
@@ -258,10 +258,10 @@
 
 /* footer common (layout)
 .footer-common
-	padding: round($text-layout-space-horizontal*1.5) #{$text-layout-space-horizontal} round($text-layout-space-horizontal*1.5 - $footer-nav-horizontal-space)
+	padding: round($text-layout-space-horizontal) #{$text-layout-space-horizontal} round($text-layout-space-horizontal*1.5 - $footer-nav-horizontal-space)
 
 	+media('<desk-hd')
-		padding: round($text-layout-space-horizontal--lg*1.5) #{$text-layout-space-horizontal--lg} round($text-layout-space-horizontal--lg*1.5 - $footer-nav-horizontal-space)
+		padding: round($text-layout-space-horizontal--lg) #{$text-layout-space-horizontal--lg} round($text-layout-space-horizontal--lg*1.5 - $footer-nav-horizontal-space)
 
 	+media('<tab-lg')
 		padding: round($text-layout-space-horizontal--md*1.5) #{$text-layout-space-horizontal--md} 0
