--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -203,6 +203,7 @@ $nav-bg-color-ssss: #333 !default
 
 // footer
 $footer-nav-horizontal-space: 40px !default
+$ea-footer-nav-horizontal-space: 40px !default
 
 // top panel
 $top-panel-height: 80px !default
