--- a/src/sass/pages/_ea-home.sass
+++ b/src/sass/pages/_ea-home.sass
@@ -535,6 +535,9 @@ $odds-icon-size--md: 40px !default
 		+size(50px)
 		background-color: #fff
 
+		+media('<desk-lg')
+			+size(40px)
+
 .ea-main-slider__item
 	// before slide load
 	float: none
@@ -992,10 +995,11 @@ $odds-icon-size--md: 40px !default
 	display: inline-block
 	vertical-align: top
 	// before slide load end
+	position: relative
+	min-height: 320px
+	padding: 0 10px
 	color: white
 	text-decoration: none
-	position: relative
-	padding: 0 10px
 	transition:
 		property: opacity
 		duration: $animation-speed
@@ -1040,6 +1044,9 @@ $odds-icon-size--md: 40px !default
 	padding: 40px
 	z-index: 1
 
+	+media('<desk-sb')
+		padding: 30px
+
 	&.align-right
 		text-align: left
 		order: 1
@@ -1052,6 +1059,9 @@ $odds-icon-size--md: 40px !default
 		border-color: white
 		border-width: 2px
 		color: white
+
+		.no-touchevents &:hover
+			border-color: $base-color--ea
 
 .ea-stock-slider__info__layout
 	display: flex
@@ -1103,10 +1113,25 @@ $odds-icon-size--md: 40px !default
 	+grid-parent(40px)
 	+clear-spacing
 
+	+media('<desk-sb')
+		+grid-parent(30px)
+
+	+media('<mob-lg')
+		+grid-parent(20px)
+
 .ea-benefits__item
 	+grid-item(6, 40px)
 	+font(18px, round-float(22/18, 2))
 	letter-spacing: normal
+
+	+media('<desk-sb')
+		+grid-item-responsive(3, 30px)
+
+	+media('<tab-lg')
+		+grid-item-responsive(2, 30px)
+
+	+media('<mob-lg')
+		+grid-item-responsive(2, 20px)
 
 	svg
 		display: block
@@ -1134,7 +1159,7 @@ $odds-icon-size--md: 40px !default
 	vertical-align: top
 	width: calc(#{round-float(100%/3, 4)} + 1px)
 	margin: 0 0 -1px -1px
-	+font-bold
+	+font-regular
 	+font(1.8rem, round-float(24/18, 2))
 	letter-spacing: normal
 
@@ -1184,30 +1209,13 @@ $odds-icon-size--md: 40px !default
 .ea-news-previews__content
 	position: relative
 
-.ea-news-previews__title
-	overflow: hidden
-	margin-bottom: 16px
-	+font-alt-bold
-	+font(18px, 26px)
-	letter-spacing: normal
-	max-height: calc(26px * 3)
-
 .ea-news-previews__text
 	position: relative
 	overflow: hidden
-	+font(16px, 26px)
 	letter-spacing: normal
-	max-height: calc(26px * 15)
-
-	+media('<desk-hd')
-		+font(14px, 20px)
-		max-height: calc(20px * 15)
 
 	+media('<desk-sb')
-		max-height: calc(20px * 7)
-
-	+media('<tab-lg')
-		max-height: none
+		font-size: 16px
 
 	& > *:last-child
 		margin-bottom: 0
@@ -1430,22 +1438,24 @@ $odds-icon-size--md: 40px !default
 
 	.cols
 		+clear-spacing
-		+grid-parent($grid-space)
-		margin-bottom: $bottom-space
+		+grid-parent(40px)
 
-		+media('<desk-hd')
-			+grid-parent($grid-space--sm)
+		+media('<desk-sb')
+			+grid-parent(30px)
+
+		+media('<mob-lg')
+			+grid-parent(20px)
 
 	.col
-		+grid-item(3, $grid-space)
+		+grid-item(3, 40px)
 		+font(18px, round-float(32/18, 2))
 		letter-spacing: normal
 
-		+media('<desk-hd')
-			+grid-item-responsive(3, $grid-space--sm)
+		+media('<desk-sb')
+			+grid-item-responsive(3, 30px)
 
 		+media('<mob-lg')
-			+grid-item-responsive(1, $grid-space--sm)
+			+grid-item-responsive(1, 20px)
 
 	.col__title
 		+font(14px, round-float(18/14, 2))
@@ -1462,6 +1472,9 @@ $odds-icon-size--md: 40px !default
 	.col__content
 		+font(24px, round-float(32/24, 2))
 		margin-bottom: 2rem
+
+		+media('<desk-sb')
+			font-size: 20px
 
 		&:last-child
 			margin-bottom: 0
@@ -1494,17 +1507,24 @@ $odds-icon-size--md: 40px !default
 /* ea-footer-nav
 .ea-footer-nav
 	+font-regular
-	margin: 0 round(-$ea-footer-nav-horizontal-space*0.5)
+	margin: 0 -#{round($ea-footer-nav-horizontal-space/2)}
 	+clear-spacing
+
+	+media('<desk-sb')
+		margin: 0 -#{round($ea-footer-nav-horizontal-space--lg/2)}
 
 .ea-footer-nav__col
 	position: relative
 	+display-inline-block-top
 	width: round-float(100%/4, 2)
-	padding: 0 $ea-footer-nav-horizontal-space*0.5
+	padding: 0 $ea-footer-nav-horizontal-space/2
 	margin-bottom: 2rem
 	+font(18px, round-float(32/18, 2))
 	letter-spacing: normal
+
+	+media('<desk-sb')
+		width: round-float(100%/3, 2)
+		padding: 0 $ea-footer-nav-horizontal-space--lg/2
 
 	+media('<desk-sm')
 		width: round-float(100%/4, 2)
@@ -1518,6 +1538,9 @@ $odds-icon-size--md: 40px !default
 
 	&.col-2
 		width: round-float(100%/2, 2)
+
+		+media('<desk-sb')
+			width: round-float(100%/3, 2)
 
 	& > *:last-child
 		margin-bottom: 0
@@ -1543,14 +1566,25 @@ $odds-icon-size--md: 40px !default
 	column-count: 2
 	column-gap: 20px
 
+	+media('<desk-sb')
+		column-count: 1
+		//column-gap: 0
+
 	& > li
 		display: inline-block
 		vertical-align: top
 		width: 100%
-		margin-bottom: 0.5em
+		margin-bottom: 0.4em
 
 		&:last-child
 			margin-bottom: 0
+
+	ul
+		font-size: 1.4rem
+		margin-top: 0.4em
+
+		li
+			margin-bottom: 0.4em
 
 	a
 		padding-top: 0.3em
