--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -204,6 +204,8 @@ $nav-bg-color-ssss: #333 !default
 // footer
 $footer-nav-horizontal-space: 40px !default
 $ea-footer-nav-horizontal-space: 40px !default
+$ea-footer-nav-horizontal-space--lg: 30px !default
+$ea-footer-nav-horizontal-space--sm: 20px !default
 
 // top panel
 $top-panel-height: 80px !default
