--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3368,6 +3368,12 @@ input[type="radio"]:disabled ~ i::after {
 	padding-top: 80px;
 }
 
+@media (max-width: 979px) {
+	.top-panel--fixed ~ .main {
+		padding-top: 100px;
+	}
+}
+
 .main__holder {
 	width: 100%;
 }
@@ -3650,6 +3656,10 @@ input[type="radio"]:disabled ~ i::after {
 @media (max-width: 979px) {
 	.footer-common {
 		padding: 45px 30px 0;
+	}
+	.ea-site .footer-common {
+		padding-top: 30px;
+		padding-bottom: 30px;
 	}
 }
 
@@ -16679,8 +16689,20 @@ button.mfp-close path {
 	}
 }
 
+@media (max-width: 767px) {
+	.ea-main-slider {
+		margin-bottom: 30px;
+	}
+}
+
 .ea-main-slider, .ea-main-slider.slick-dotted {
 	margin: 0 auto;
+}
+
+@media (max-width: 767px) {
+	.ea-main-slider, .ea-main-slider.slick-dotted {
+		margin-bottom: 30px;
+	}
 }
 
 .ea-main-slider.slick-initialized, .no-js .ea-main-slider {
@@ -16717,6 +16739,12 @@ button.mfp-close path {
 
 .ea-main-slider .slick-dots {
 	bottom: 16px;
+}
+
+@media (max-width: 767px) {
+	.ea-main-slider .slick-dots {
+		bottom: -30px;
+	}
 }
 
 .ea-main-slider .slick-dots li, .user-content .ea-main-slider .slick-dots li {
@@ -16812,7 +16840,19 @@ button.mfp-close path {
 
 .ea-main-slider__info {
 	background-color: #006ab6;
-	padding: 3.5% 60px 6.5%;
+	padding: 3.5% 40px 6.5% 60px;
+}
+
+@media (max-width: 639px) {
+	.ea-main-slider__info {
+		padding: 3.5% 20px 3.5% 50px;
+	}
+}
+
+@media (max-width: 479px) {
+	.ea-main-slider__info {
+		padding-right: 10px;
+	}
 }
 
 .ea-main-slider__info.align-right {
@@ -16826,6 +16866,27 @@ button.mfp-close path {
 .ea-main-slider__info .btn-default {
 	text-transform: uppercase;
 	min-width: 224px;
+}
+
+@media (max-width: 767px) {
+	.ea-main-slider__info .btn-default {
+		min-width: 0;
+		padding: 8px 12px;
+		font-size: 14px;
+	}
+}
+
+@media (max-width: 639px) {
+	.ea-main-slider__info .btn-default {
+		font-size: 12px;
+	}
+}
+
+@media (max-width: 479px) {
+	.ea-main-slider__info .btn-default {
+		font-size: 9px;
+		padding: 2px 4px;
+	}
 }
 
 .ea-main-slider__info__layout {
@@ -16873,6 +16934,12 @@ button.mfp-close path {
 	}
 }
 
+@media (max-width: 639px) {
+	.ea-main-slider__title {
+		font-size: 4vw;
+	}
+}
+
 .ea-main-slider__text {
 	font-size: 19px;
 	line-height: 1.42;
@@ -16889,6 +16956,12 @@ button.mfp-close path {
 @media (max-width: 1279px) {
 	.ea-main-slider__text {
 		font-size: 1.5vw;
+	}
+}
+
+@media (max-width: 639px) {
+	.ea-main-slider__text {
+		font-size: 2vw;
 	}
 }
 
@@ -16935,7 +17008,7 @@ button.mfp-close path {
 	clear: both;
 }
 
-@media (max-width: 639px) {
+@media (max-width: 479px) {
 	.share-nav {
 		float: none;
 		display: block;
@@ -16969,6 +17042,12 @@ button.mfp-close path {
 }
 
 @media (max-width: 639px) {
+	.share-nav__item a {
+		min-width: 100px;
+	}
+}
+
+@media (max-width: 479px) {
 	.share-nav__item a {
 		min-width: 0;
 		padding-right: 10px;
@@ -17060,7 +17139,7 @@ button.mfp-close path {
 	border: 1px solid #ccc;
 }
 
-@media (max-width: 639px) {
+@media (max-width: 479px) {
 	.share-list .slick-arrow {
 		bottom: auto;
 		top: 50%;
@@ -17073,7 +17152,7 @@ button.mfp-close path {
 	right: 49px;
 }
 
-@media (max-width: 639px) {
+@media (max-width: 479px) {
 	.share-list .slick-prev {
 		right: auto;
 		left: 0;
@@ -17329,24 +17408,9 @@ button.mfp-close path {
 	border: 1px solid #ccc;
 }
 
-@media (max-width: 639px) {
-	.ea-stock-slider .slick-arrow {
-		bottom: auto;
-		top: 50%;
-		margin: -20px 0 0;
-	}
-}
-
 .ea-stock-slider .slick-prev {
 	left: auto;
 	right: 49px;
-}
-
-@media (max-width: 639px) {
-	.ea-stock-slider .slick-prev {
-		right: auto;
-		left: 0;
-	}
 }
 
 .ea-stock-slider__item {
@@ -17415,6 +17479,12 @@ button.mfp-close path {
 	}
 }
 
+@media (max-width: 767px) {
+	.ea-stock-slider__info {
+		padding: 20px;
+	}
+}
+
 .ea-stock-slider__info.align-right {
 	text-align: left;
 	-webkit-box-ordinal-group: 2;
@@ -17473,10 +17543,34 @@ button.mfp-close path {
 	margin-bottom: 0.3em;
 }
 
+@media (max-width: 767px) {
+	.ea-stock-slider__title {
+		font-size: 20px;
+	}
+}
+
+@media (max-width: 639px) {
+	.ea-stock-slider__title {
+		font-size: 24px;
+	}
+}
+
 .ea-stock-slider__text {
 	font-size: 18px;
 	line-height: 1.22;
 	margin-bottom: 0.4em;
+}
+
+@media (max-width: 767px) {
+	.ea-stock-slider__text {
+		font-size: 16px;
+	}
+}
+
+@media (max-width: 639px) {
+	.ea-stock-slider__text {
+		font-size: 18px;
+	}
 }
 
 /* ea-stock-slider end */
@@ -17548,25 +17642,12 @@ button.mfp-close path {
 	}
 }
 
-@media (max-width: 979px) {
-	.ea-benefits__item {
-		width: 50%;
-		padding-left: 15px;
-		padding-right: 15px;
-	}
-	.ea-benefits__item, .ea-benefits__item:nth-last-child(n+3) {
-		margin-bottom: 30px;
-	}
-	.ea-benefits__item:nth-last-child(-n+2) {
-		margin-bottom: 0;
-	}
-}
-
 @media (max-width: 639px) {
 	.ea-benefits__item {
 		width: 50%;
 		padding-left: 10px;
 		padding-right: 10px;
+		font-size: 16px;
 	}
 	.ea-benefits__item, .ea-benefits__item:nth-last-child(n+3) {
 		margin-bottom: 20px;
@@ -17581,6 +17662,14 @@ button.mfp-close path {
 	margin-bottom: 25px;
 	width: 60px;
 	height: 60px;
+}
+
+@media (max-width: 639px) {
+	.ea-benefits__item svg {
+		width: 40px;
+		height: 40px;
+		margin-bottom: 15px;
+	}
 }
 
 /* ea main benefits end */
@@ -17615,7 +17704,7 @@ button.mfp-close path {
 	letter-spacing: normal;
 }
 
-@media (max-width: 979px) {
+@media (max-width: 767px) {
 	.ea-news-previews__item {
 		width: 100%;
 	}
@@ -17910,6 +17999,13 @@ button.mfp-close path {
 	transition-duration: 0.2s;
 }
 
+@media (max-width: 639px) {
+	.contacts-accordion > a {
+		padding-top: 0;
+		font-size: 20px;
+	}
+}
+
 .contacts-accordion > a:hover {
 	color: #fabb00;
 }
@@ -18068,12 +18164,6 @@ button.mfp-close path {
 	}
 }
 
-.contacts-accordion .col__title {
-	font-size: 14px;
-	line-height: 1.29;
-	margin-bottom: 2rem;
-}
-
 .contacts-accordion svg {
 	display: block;
 	width: 60px;
@@ -18081,8 +18171,32 @@ button.mfp-close path {
 	margin-bottom: 2rem;
 }
 
+@media (max-width: 639px) {
+	.contacts-accordion svg {
+		width: 40px;
+		height: 40px;
+		float: left;
+		margin-bottom: 0;
+		margin-right: 1.5rem;
+	}
+}
+
 .contacts-accordion path {
 	fill: currentColor;
+}
+
+.contacts-accordion .col__title {
+	font-size: 14px;
+	line-height: 1.29;
+	margin-bottom: 2rem;
+}
+
+@media (max-width: 639px) {
+	.contacts-accordion .col__title {
+		margin-left: 55px;
+		margin-top: 1.2rem;
+		margin-bottom: 1.5rem;
+	}
 }
 
 .contacts-accordion .col__content {
@@ -18094,6 +18208,18 @@ button.mfp-close path {
 @media (max-width: 1399px) {
 	.contacts-accordion .col__content {
 		font-size: 20px;
+	}
+}
+
+@media (max-width: 767px) {
+	.contacts-accordion .col__content {
+		font-size: 18px;
+	}
+}
+
+@media (max-width: 639px) {
+	.contacts-accordion .col__content {
+		margin-left: 55px;
 	}
 }
 
@@ -18167,22 +18293,16 @@ button.mfp-close path {
 	}
 }
 
-@media (max-width: 1199px) {
+@media (max-width: 767px) {
 	.ea-footer-nav__col {
-		width: 25%;
-	}
-}
-
-@media (max-width: 979px) {
-	.ea-footer-nav__col {
-		width: 50%;
+		font-size: 16px;
 	}
 }
 
 @media (max-width: 639px) {
 	.ea-footer-nav__col {
-		display: none;
 		width: 100%;
+		text-align: center;
 	}
 }
 
@@ -18193,6 +18313,12 @@ button.mfp-close path {
 @media (max-width: 1399px) {
 	.ea-footer-nav__col.col-2 {
 		width: 33.33%;
+	}
+}
+
+@media (max-width: 639px) {
+	.ea-footer-nav__col.col-2 {
+		width: 100%;
 	}
 }
 
@@ -18289,6 +18415,7 @@ button.mfp-close path {
 @media (max-width: 639px) {
 	.ea-footer-nav__item {
 		display: block;
+		float: none;
 		text-align: center;
 		width: auto;
 	}
