--- a/src/sass/print/_print.sass
+++ b/src/sass/print/_print.sass
@@ -11,6 +11,9 @@
 		box-shadow: none !important
 		text-shadow: none !important
 
+	body
+		min-width: 1024px
+
 	a, a:visited
 		text-decoration: underline
 
